--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Create storage account and container
         id: setup_storage
         run: |
-          STORAGE_ACCOUNT_NAME=$(echo "$cluster_name")123457
+          STORAGE_ACCOUNT_NAME=$(echo "$cluster_name")$RANDOM
           CONTAINER_NAME=$(echo "${cluster_name}")tfstate
           az storage account create --resource-group $RESOURCE_GROUP_NAME --name $STORAGE_ACCOUNT_NAME --sku Standard_LRS --encryption-services blob
           ACCOUNT_KEY=$(az storage account keys list --resource-group $RESOURCE_GROUP_NAME --account-name $STORAGE_ACCOUNT_NAME --query '[0].value' -o tsv)
