--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,9 +37,9 @@ jobs:
           echo "::set-output name=account_key::$ACCOUNT_KEY"
 
       # Create AKS Cluster
-      - uses: gambtho/aks_create_action@main
+      - uses: actions/aks_create_action@v1
         with:
-          CLUSTER_NAME: ${{ env.CLUSTER_NAME }}
+          CLUSTER_NAME: aksghrunner
           RESOURCE_GROUP_NAME: ${{ secrets.RESOURCE_GROUP_NAME }}
           STORAGE_ACCOUNT_NAME: ${{ steps.setup_storage.outputs.storage_account_name }}
           STORAGE_CONTAINER_NAME: ${{ steps.setup_storage.outputs.container_name }}
@@ -49,6 +49,7 @@ jobs:
           ARM_SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
           ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
           ACTION_TYPE: create
+          CLUSTER_SIZE: dev
           CREATE_ACR: true
 
       - name: Build and push Github Runner image
