--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ env:
   
 jobs:
   build:
-    runs-on: ubuntu-latest
-
+    runs-on: ghrunner
+ # runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
@@ -24,17 +24,17 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Create storage account and container
-        id: setup_storage
-        run: |
-          STORAGE_ACCOUNT_NAME=$(echo "$RESOURCE_GROUP_NAME" | tr '[:upper:]' '[:lower:]')$RANDOM
-          CONTAINER_NAME=$(echo "${CLUSTER_NAME}" | tr '[:upper:]' '[:lower:]')tfstate
-          az storage account create --resource-group $RESOURCE_GROUP_NAME --name $STORAGE_ACCOUNT_NAME --sku Standard_LRS --encryption-services blob
-          ACCOUNT_KEY=$(az storage account keys list --resource-group $RESOURCE_GROUP_NAME --account-name $STORAGE_ACCOUNT_NAME --query '[0].value' -o tsv)
-          az storage container create --name $CONTAINER_NAME --account-name $STORAGE_ACCOUNT_NAME --account-key $ACCOUNT_KEY
-          echo "::set-output name=storage_account_name::$STORAGE_ACCOUNT_NAME"
-          echo "::set-output name=container_name::$CONTAINER_NAME"
-          echo "::set-output name=account_key::$ACCOUNT_KEY"
+#      - name: Create storage account and container
+#        id: setup_storage
+#        run: |
+#          STORAGE_ACCOUNT_NAME=$(echo "$RESOURCE_GROUP_NAME" | tr '[:upper:]' '[:lower:]')$RANDOM
+#          CONTAINER_NAME=$(echo "${CLUSTER_NAME}" | tr '[:upper:]' '[:lower:]')tfstate
+#          az storage account create --resource-group $RESOURCE_GROUP_NAME --name $STORAGE_ACCOUNT_NAME --sku Standard_LRS --encryption-services blob
+#          ACCOUNT_KEY=$(az storage account keys list --resource-group $RESOURCE_GROUP_NAME --account-name $STORAGE_ACCOUNT_NAME --query '[0].value' -o tsv)
+#          az storage container create --name $CONTAINER_NAME --account-name $STORAGE_ACCOUNT_NAME --account-key $ACCOUNT_KEY
+#          echo "::set-output name=storage_account_name::$STORAGE_ACCOUNT_NAME"
+#          echo "::set-output name=container_name::$CONTAINER_NAME"
+#          echo "::set-output name=account_key::$ACCOUNT_KEY"
 
 #      - name: Create AKS Cluster
 #        uses: Azure/aks-create-action@1.1
@@ -57,35 +57,35 @@ jobs:
         run: |
           CLUSTER_NAME=aksghrunner
           
-      - name: Build and push Github Runner image
-        run: |
-          az configure --defaults acr=${CLUSTER_NAME}
-          az acr build -t ghrunner:${GITHUB_SHA} ./ghrdocker
+#      - name: Build and push Github Runner image
+#        run: |
+#          az configure --defaults acr=${CLUSTER_NAME}
+#          az acr build -t ghrunner:${GITHUB_SHA} ./ghrdocker
 
-      - name: Create Helm chart
-        run: |
-          # az configure --defaults acr=${CLUSTER_NAME}
-          # az acr login -n ${CLUSTER_NAME}
-          cd ./ghrhelm
-          helm package .
-          # helm push ghr-0.0.1.tgz oci://${CLUSTER_NAME}.azurecr.io/ghrunner
+ #     - name: Create Helm chart
+ #       run: |
+ #         # az configure --defaults acr=${CLUSTER_NAME}
+ #         # az acr login -n ${CLUSTER_NAME}
+ #         cd ./ghrhelm
+ #         helm package .
+ #         # helm push ghr-0.0.1.tgz oci://${CLUSTER_NAME}.azurecr.io/ghrunner
 
-      - name: AKS set context
-        uses: azure/aks-set-context@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-          resource-group: ${{ secrets.RESOURCE_GROUP_NAME }}
-          cluster-name: ${{ env.CLUSTER_NAME }}
+  #    - name: AKS set context
+  #      uses: azure/aks-set-context@v1
+  #      with:
+  #        creds: ${{ secrets.AZURE_CREDENTIALS }}
+  #        resource-group: ${{ secrets.RESOURCE_GROUP_NAME }}
+  #        cluster-name: ${{ env.CLUSTER_NAME }}
 
-      - name: Deploy via Helm
-        run: |
-          cd ./ghrhelm
-          # az configure --defaults acr=${CLUSTER_NAME}
-          # helm pull oci://${CLUSTER_NAME}.azurecr.io/ghrunner/ghr --version 0.0.1
-          helm install ghrunner ghr-0.0.1.tgz \
-            --set image.repository=${CLUSTER_NAME}.azurecr.io/ghrunner \
-            --set image.tag=${GITHUB_SHA} \
-            --set ghr.github_token=${GH_TOKEN} \
-            --set ghr.repo_name=${REPO_NAME} \
-            --set ghr.repo_url=${REPO_URL} \
-            --set ghr.repo_owner=${REPO_OWNER} \
+  #    - name: Deploy via Helm
+  #      run: |
+  #        cd ./ghrhelm
+  #        # az configure --defaults acr=${CLUSTER_NAME}
+  #        # helm pull oci://${CLUSTER_NAME}.azurecr.io/ghrunner/ghr --version 0.0.1
+  #        helm install ghrunner ghr-0.0.1.tgz \
+  #          --set image.repository=${CLUSTER_NAME}.azurecr.io/ghrunner \
+  #          --set image.tag=${GITHUB_SHA} \
+  #          --set ghr.github_token=${GH_TOKEN} \
+  #          --set ghr.repo_name=${REPO_NAME} \
+  #          --set ghr.repo_url=${REPO_URL} \
+  #          --set ghr.repo_owner=${REPO_OWNER} \
